@@ -18,6 +18,7 @@ package com.google.common.reflect;
 
 import static com.google.common.collect.Maps.immutableEntry;
 import static com.google.common.truth.Truth.assertThat;
+import static org.junit.Assert.assertThrows;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -50,7 +51,7 @@ public class MutableTypeToInstanceMapTest extends TestCase {
                   // Other tests will verify what real, warning-free usage looks like
                   // but here we have to do some serious fudging
                   @Override
-                  @SuppressWarnings("unchecked")
+                  @SuppressWarnings({"unchecked", "rawtypes"})
                   public Map<TypeToken, Object> create(Object... elements) {
                     MutableTypeToInstanceMap<Object> map = new MutableTypeToInstanceMap<>();
                     for (Object object : elements) {
@@ -81,62 +82,47 @@ public class MutableTypeToInstanceMapTest extends TestCase {
   }
 
   public void testPutThrows() {
-    try {
-      map.put(TypeToken.of(Integer.class), new Integer(5));
-      fail();
-    } catch (UnsupportedOperationException expected) {
-    }
+    assertThrows(
+        UnsupportedOperationException.class,
+        () -> map.put(TypeToken.of(Integer.class), Integer.valueOf(5)));
   }
 
   public void testPutAllThrows() {
-    try {
-      map.putAll(ImmutableMap.of(TypeToken.of(Integer.class), new Integer(5)));
-      fail();
-    } catch (UnsupportedOperationException expected) {
-    }
+    assertThrows(
+        UnsupportedOperationException.class,
+        () -> map.putAll(ImmutableMap.of(TypeToken.of(Integer.class), Integer.valueOf(5))));
   }
 
   public void testEntrySetMutationThrows() {
     map.putInstance(String.class, "test");
     assertEquals(TypeToken.of(String.class), map.entrySet().iterator().next().getKey());
     assertEquals("test", map.entrySet().iterator().next().getValue());
-    try {
-      map.entrySet().iterator().next().setValue(1);
-      fail();
-    } catch (UnsupportedOperationException expected) {
-    }
+    assertThrows(
+        UnsupportedOperationException.class, () -> map.entrySet().iterator().next().setValue(1));
   }
 
   public void testEntrySetToArrayMutationThrows() {
     map.putInstance(String.class, "test");
     @SuppressWarnings("unchecked") // Should get a CCE later if cast is wrong
-    Entry<Object, Object> entry = (Entry<Object, Object>) map.entrySet().toArray()[0];
+    Entry<?, Object> entry = (Entry<?, Object>) map.entrySet().toArray()[0];
     assertEquals(TypeToken.of(String.class), entry.getKey());
     assertEquals("test", entry.getValue());
-    try {
-      entry.setValue(1);
-      fail();
-    } catch (UnsupportedOperationException expected) {
-    }
+    assertThrows(UnsupportedOperationException.class, () -> entry.setValue(1));
   }
 
   public void testEntrySetToTypedArrayMutationThrows() {
     map.putInstance(String.class, "test");
     @SuppressWarnings("unchecked") // Should get a CCE later if cast is wrong
-    Entry<Object, Object> entry = map.entrySet().toArray(new Entry[0])[0];
+    Entry<?, Object> entry = (Entry<?, Object>) map.entrySet().toArray(new Entry<?, ?>[0])[0];
     assertEquals(TypeToken.of(String.class), entry.getKey());
     assertEquals("test", entry.getValue());
-    try {
-      entry.setValue(1);
-      fail();
-    } catch (UnsupportedOperationException expected) {
-    }
+    assertThrows(UnsupportedOperationException.class, () -> entry.setValue(1));
   }
 
   public void testPutAndGetInstance() {
-    assertNull(map.putInstance(Integer.class, new Integer(5)));
+    assertNull(map.putInstance(Integer.class, Integer.valueOf(5)));
 
-    Integer oldValue = map.putInstance(Integer.class, new Integer(7));
+    Integer oldValue = map.putInstance(Integer.class, Integer.valueOf(7));
     assertEquals(5, (int) oldValue);
 
     Integer newValue = map.getInstance(Integer.class);
@@ -147,11 +133,9 @@ public class MutableTypeToInstanceMapTest extends TestCase {
   }
 
   public void testNull() {
-    try {
-      map.putInstance((TypeToken) null, new Integer(1));
-      fail();
-    } catch (NullPointerException expected) {
-    }
+    assertThrows(
+        NullPointerException.class,
+        () -> map.putInstance((TypeToken<Integer>) null, Integer.valueOf(1)));
     map.putInstance(Integer.class, null);
     assertTrue(map.containsKey(TypeToken.of(Integer.class)));
     assertTrue(map.entrySet().contains(immutableEntry(TypeToken.of(Integer.class), null)));
@@ -193,7 +177,8 @@ public class MutableTypeToInstanceMapTest extends TestCase {
 
   public void testGenericArrayType() {
     @SuppressWarnings("unchecked") // Trying to test generic array
-    ImmutableList<Integer>[] array = new ImmutableList[] {ImmutableList.of(1)};
+    ImmutableList<Integer>[] array =
+        (ImmutableList<Integer>[]) new ImmutableList<?>[] {ImmutableList.of(1)};
     TypeToken<ImmutableList<Integer>[]> type = new TypeToken<ImmutableList<Integer>[]>() {};
     map.putInstance(type, array);
     assertEquals(1, map.size());
@@ -208,19 +193,14 @@ public class MutableTypeToInstanceMapTest extends TestCase {
   }
 
   public void testGetInstance_withTypeVariable() {
-    try {
-      map.getInstance(this.<Number>anyIterableType());
-      fail();
-    } catch (IllegalArgumentException expected) {
-    }
+    assertThrows(
+        IllegalArgumentException.class, () -> map.getInstance(this.<Number>anyIterableType()));
   }
 
   public void testPutInstance_withTypeVariable() {
-    try {
-      map.putInstance(this.<Integer>anyIterableType(), ImmutableList.of(1));
-      fail();
-    } catch (IllegalArgumentException expected) {
-    }
+    assertThrows(
+        IllegalArgumentException.class,
+        () -> map.putInstance(this.<Integer>anyIterableType(), ImmutableList.of(1)));
   }
 
   private <T> TypeToken<Iterable<T>> anyIterableType() {
